# ds-editor-pro-x

./: CMakeLists.txt  README.md
docs/: ARCHITECTURE.md  BUILD.md  ROADMAP.md
src/: main.cpp
src/color/: ColorPipeline.cpp  ColorPipeline.h  Scopes.cpp  Scopes.h
src/core/: Clip.cpp  Clip.h  MediaAsset.cpp  MediaAsset.h  Project.cpp  Project.h  Timeline.cpp  Timeline.h  Track.cpp  Track.h  UndoStack.cpp  UndoStack.h
src/engine/: DecodeEngine.cpp  DecodeEngine.h  PlaybackController.cpp  PlaybackController.h  ProxyManager.cpp  ProxyManager.h  RenderGraph.cpp  RenderGraph.h
src/export/: EncodeProfile.cpp  EncodeProfile.h  ExportQueue.cpp  ExportQueue.h
src/ui/: InspectorPanel.cpp  InspectorPanel.h  MainWindow.cpp  MainWindow.h  MediaBinPanel.cpp  MediaBinPanel.h  TimelinePanel.cpp  TimelinePanel.h  ViewerPanel.cpp  ViewerPanel.h
tests/: CMakeLists.txt  composite_probe.cpp  decode_probe.cpp  seek_probe.cpp  test_clip.cpp  test_timeline.cpp  test_track.cpp
